--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-react": "^7.25.1",
+    "mobx-logger": "^0.7.1",
     "prettier": "^2.3.2",
     "redux-logger": "^3.0.6"
   }
